# mini-numpy-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/dev/: add_numbers.py
python/mini_numpy/: __init__.py  __init__.pyi
python/tests/: test_all.py  test_arithmetic.py  test_equality.py
src/: errors.rs  lib.rs  vecs.rs
