[package]
name = "mini-numpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mini_numpy"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2.19"
pyo3 = "0.28.2"
pyo3-stub-gen = "0.22.2"

[dev-dependencies]
mini-numpy ={path="."}
[features]
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["pyo3/generate-import-lib"]
