[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "mini-numpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"

[tool.pyo3-stub-gen]
generate-init-py = true    # Enable for all packages with re-exports

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "pytest>=8.3.5",
]
